# data-science-starter

./: pyproject.toml
notebook/: adhoc.ipynb
